--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Hello World,</title>
+    <style>
+        h1{
+            color: blue;
+        }
+    </style>
 </head>
 <body>
     Hello,World
